homework/14.5/src/pod1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    app: pod-1
spec:
  containers:
  - name: multitool-1
    image: wbitt/network-multitool
    ports:
    - containerPort: 80
    volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    configMap:
      name: nginx-html-1
---
apiVersion: v1
kind: Service
metadata:
  name: pod-svc-1
spec:
  ports:
    - name: http-port
      port: 80
  selector:
    app: pod-1
...
