homework/14.5/src/pod2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    app: pod-2
spec:
  containers:
  - name: multitool-2
    image: wbitt/network-multitool
    ports:
    - containerPort: 80
    volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    configMap:
      name: nginx-html-2
---
apiVersion: v1
kind: Service
metadata:
  name: pod-svc-2
spec:
  ports:
    - name: http-port
      port: 80
  selector:
    app: pod-2
...
